assets/stylesheets/tailwind.css
/* ... */
@media (min-width: 768px) {
  .md\:mt-48 {
    margin-top: 12rem;
  }

  .md\:mb-12 {
    margin-bottom: 3rem;
  }

  .md\:mt-24 {
    margin-top: 6rem;
  }

  .md\:mt-12 {
    margin-top: 3rem;
  }

  .md\:w-1\/4 {
    width: 25%;
  }

  .md\:w-1\/2 {
    width: 50%;
  }

  .md\:basis-1\/2 {
    flex-basis: 50%;
  }

  .md\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .md\:grid-cols-1 {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }

  .md\:p-32 {
    padding: 8rem;
  }

  .md\:p-24 {
    padding: 6rem;
  }

  .md\:p-0 {
    padding: 0px;
  }

  .md\:text-7xl {
    font-size: 4.5rem;
    line-height: 1;
  }

  .md\:text-3xl {
    font-size: 1.875rem;
    line-height: 2.25rem;
  }

  .md\:text-2xl {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 1024px) {
  .lg\:basis-1\/2 {
    flex-basis: 50%;
  }

  .lg\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .lg\:grid-cols-1 {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }

  .lg\:text-7xl {
    font-size: 4.5rem;
    line-height: 1;
  }

  .lg\:text-3xl {
    font-size: 1.875rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 1280px) {
  .xl\:mx-auto {
    margin-left: auto;
    margin-right: auto;
  }

  .xl\:w-96 {
    width: 24rem;
  }

  .xl\:basis-1\/2 {
    flex-basis: 50%;
  }

  .xl\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .xl\:grid-cols-1 {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }

  .xl\:text-7xl {
    font-size: 4.5rem;
    line-height: 1;
  }

  .xl\:text-3xl {
    font-size: 1.875rem;
    line-height: 2.25rem;
  }
}

